scripts/nullaway/annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8.txt
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/main/BlogDemoMain.java:37: error: [NullAway] dereferenced expression searchedAuthor is @Nullable
		Post post = new Post("My First Post", "This is awesome. I am loving it", new Date(), searchedAuthor.getId(), tagList);
		                                                                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/factory/MongoDBFactory.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return mongoDBFactory;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:47: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return post;
		^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
